# ec2-instance-manager

./: .cursorrules  .gitignore  Cargo.toml  Cross.toml  Dockerfile.musl
.cargo/: config.toml
src/: app.rs  config.rs  ec2.rs  main.rs  pricing.rs  ui.rs
